<resources>
    <string name="app_name">Practicas Enero DAM</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCreate">Do</string>
    <string name="btnDetails">Details</string>
    <string name="btnNewTask">Add new</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_msg">Are you sure?</string>
    <string name="remove_tarea_msg">Delete element</string>
    <string name="save_message">Save</string>
    <string name="return_message">Return</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="btnDeleteDet">Delete</string>
    <string name="btnModifyDet">Modify</string>
    <string name="task_detail">Task Detail</string>
    <string name="tarea_registered_message">Message registered</string>
    <string name="tarea_registered_error">Registered error</string>
    <string name="select_location_message">Select location</string>
    <string name="not_empty_message">There are empty fields</string>
    <string name="newName">New name</string>
    <string name="newDescription">New description</string>
    <string name="newOwner">New owner</string>
</resources>